testing new commit

--- a/references.html
+++ b/references.html
@@ -34,7 +34,7 @@
     <script></script>
     <p id="home1"></p>
     <section id="electroics-container"></section>
-    <script src="./node_modules/axios/dist/axios.min.js"></script>
+    <!-- <script src="./node_modules/axios/dist/axios.min.js"></script> -->
     	<script src="index.js"></script>
     </body>
     </html>
